Fix style for InputRadioGroups so it looks better on smaller screens
it a little bit hacky way of doing it, got to find some better option

--- a/occurrences-app/src/components/pages/Occurrence/BasicData/BasicData.scss
+++ b/occurrences-app/src/components/pages/Occurrence/BasicData/BasicData.scss
@@ -13,4 +13,7 @@
       display: none;
     }
   }
+  .input-radio-group {
+    margin-right: 180px;
+  }
 }
